Aufgabe 1: User authentication

--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\ChatProtocol\ChatProtocol.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="users.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
